--- a/package.json
+++ b/package.json
@@ -8,24 +8,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.0",
     "next": "12.0.7",
-    "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-spring": "^9.3.2",
-    "tailwindcss": "^3.0.7"
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "postcss": "^8.4.5",
     "prettier": "2.5.1",
+    "tailwindcss": "^3.0.13",
     "typescript": "4.5.4"
   }
 }
