--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.3.1",
     "gray-matter": "^4.0.3",
     "next": "12.0.7",
     "react": "17.0.2",
