--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "postcss": "^8.4.5",
     "prettier": "2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.5",
     "tailwindcss": "^3.0.13",
     "typescript": "4.5.4"
   }
