--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.1",
     "gray-matter": "^4.0.3",
     "next": "12.0.7",
     "react": "17.0.2",
