--- a/packages/tod-blog/package.json
+++ b/packages/tod-blog/package.json
@@ -13,14 +13,14 @@
   "dependencies": {
     "@codesandbox/sandpack-react": "2.19.10",
     "dedent": "1.5.3",
-    "next": "14.2.21",
+    "next": "^15.1.4",
     "next-sitemap": "2.5.28",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "4.12.0",
     "typed.js": "2.1.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "14.2.21"
+    "@next/eslint-plugin-next": "^15.1.4"
   }
 }
