--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "@commitlint/cli": "19.6.0",
     "@commitlint/config-conventional": "19.6.0",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
     "@jest/globals": "29.7.0",
     "@tailwindcss/node": "^4.1.18",
     "@tailwindcss/postcss": "^4.1.18",
@@ -27,8 +29,8 @@
     "@types/node": "20.17.9",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
+    "@typescript-eslint/eslint-plugin": "8.53.0",
+    "@typescript-eslint/parser": "8.53.0",
     "autoprefixer": "^10.4.23",
     "babel-jest": "29.7.0",
     "cypress": "13.16.0",
@@ -37,13 +39,14 @@
     "eslint-config-prettier": "^10.0.0",
     "eslint-import-resolver-typescript": "2.7.1",
     "eslint-plugin-cypress": "2.15.2",
-    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "28.9.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-prettier": "^5.2.0",
-    "eslint-plugin-react": "7.37.2",
-    "eslint-plugin-react-hooks": "4.6.2",
-    "eslint-plugin-tailwindcss": "^3.17.5",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "7.0.1",
+    "eslint-plugin-tailwindcss": "^3.18.2",
+    "globals": "^17.0.0",
     "husky": "9.1.7",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
@@ -54,6 +57,7 @@
     "tailwindcss": "^4.1.18",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "5.7.2"
+    "typescript": "5.7.2",
+    "typescript-eslint": "^8.53.0"
   }
 }
