--- a/packages/tod-blog/package.json
+++ b/packages/tod-blog/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "postbuild": "npx next-sitemap",
     "dev": "next dev",
-    "eslint:fix": "eslint --fix ./app ./components --ext .js,.jsx,.ts,.tsx",
+    "eslint:fix": "eslint --fix .",
     "start": "next start"
   },
   "dependencies": {
